<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClimaCast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_zip_code_here_">Enter zip code here.</string>
    <string name="getButtonText">Get Weather!</string>
    <string name="tempf_label">Temp:</string>
    <string name="description_label">Current Condition:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="wind_speed_label">Wind Speed:</string>
    <string name="wind_direction_label">Wind Direction:</string>
    <string name="description_image">Description Image</string>
    <string name="location">ZIP Code:</string>
    <string name="amount_of_days_to_forcast">Amount of days to forcast</string>
    <string name="enter_a_valid_zip_code_">Enter a valid zip code.</string>
    <string name="please_enter_1_5_">Please enter 1-5!</string>
    
    

</resources>
