<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
           
	    <EditText 
	        android:id="@+id/editText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/enter_zip_code_here_"
	        />
	
	    <Button
	        android:id="@+id/startButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/getButtonText" />

		</LinearLayout>	    
			    
	<GridLayout
       android:id="@+id/resultsData"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:columnCount="2">

       <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/description_label"
               style="@style/ResultLabels"/>

       <ImageView
               android:id="@+id/data_image"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"

               android:contentDescription="@string/description_image">
       </ImageView>
       
       <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tempf_label"
               style="@style/ResultLabels"/>
       
      <TextView
               android:id="@+id/data_tempF"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/ResultText"/>



       <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/humidity_label"
               style="@style/ResultLabels"/>

       <TextView
               android:id="@+id/data_humidity"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/ResultText"/>

       <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/wind_speed_label"
               style="@style/ResultLabels"/>

       <TextView
               android:id="@+id/data_windSpeed"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/ResultText"/>

       <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/wind_direction_label"
               style="@style/ResultLabels"/>

       <TextView
               android:id="@+id/data_windDirection"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/ResultText"/>
    </GridLayout>
	        
</LinearLayout>