<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_zip_code_here_" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getButtonText" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/resultsData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label" />

        <TextView
            android:id="@+id/weatherDesc"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempf_label" />

        <TextView
            android:id="@+id/data_tempF"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label" />

        <TextView
            android:id="@+id/data_humidity"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed_label" />

        <TextView
            android:id="@+id/data_windSpeed"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_direction_label" />

        <TextView
            android:id="@+id/data_windDirection"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

</LinearLayout>